--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#2F3BA2",
   "icons": [
     {
-      "src": "https://example.com/icons/icon-192x192.jpg",
+      "src": "https://avatars.githubusercontent.com/u/196933094?v=4.jpg",
       "sizes": "192x192",
       "type": "image/jpeg"
     },
     {
-      "src": "https://example.com/icons/icon-512x512.jpg",
+      "src": "https://avatars.githubusercontent.com/u/196933094?v=4",
       "sizes": "512x512",
       "type": "image/jpeg"
     }
