--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
-  "name": "MRMODS App v1",
-  "short_name": "MRMODS v1",
+  "name": "MRMODS App",
+  "short_name": "MRMODS",
+  "description": "تطبيق MRMODS يقدم خدمات متعددة.",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#2F3BA2",
   "theme_color": "#2F3BA2",
   "icons": [
     {
-      "src": "https://avatars.githubusercontent.com/u/196933094?v=4.jpg",
+      "src": "https://avatars.githubusercontent.com/u/196933094?v=4",
       "sizes": "192x192",
       "type": "image/jpeg"
     },
